--- a/src/style/style.less
+++ b/src/style/style.less
@@ -8,6 +8,13 @@
     }
     .input{
         position: fixed;
-        top: 120px;
+        top: 100px;
+        width: 100%;
+        textarea{
+            position: absolute;
+            top: 0;
+            width: 100%;
+            height: 500px;
+        }
     }
 }
